--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -18,5 +18,8 @@ RUN     cp /runtime/.tmp/styles/main.css /runtime/app/styles/
 
 # The default port of the application
 EXPOSE  8080
-#CMD     grunt serve
-CMD [ "/usr/bin/gitrest", "-repo-dir=/var/local/data/swagger-specs", "-static-dir=/runtime/app/" ]
+#
+
+ENTRYPOINT [ "/usr/bin/gitrest" ]
+
+CMD [ "-repo-dir=/var/local/data/swagger-specs", "-static-dir=/runtime/app/", "-password-file", "/var/local/data/swagger-specs/htpasswd" ]
